--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
     <h3 class="display-6"> Welcome to End to Face Recognition Web App Project</h3>
         <br>
             <p>
-                This course explains you the end to end flow of Face Recognition. 
-                And this course can split into two parts.
+                This image explains you the end to end flow of Face Recognition. 
+                And this Project can split into two parts.
             </p>
             <img src="/static/images/content/modules.svg" class="image-fluid" height="300" alt="">
             <p>
